bpo-27580: Add support of null characters in the csv module. (GH-28808)